--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "yogi"
 version = "0.1.0"
-authors = ["J"]
+authors = ["J/A <archer884@gmail.com>"]
 
 [dependencies]
 digest = "0.7.2"
