--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["J/A <archer884@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-digest = "0.7.2"
-sha2 = "0.7.0"
-walkdir = "2.1.3"
-picnic = { git = "https://github.com/archer884/picnic" }
+digest = "0.8.1"
+sha2 = "0.8.1"
+structopt = "0.3.11"
+walkdir = "2.3.1"
