Use new 'imprint' library
The "fingerprint" module originally included is known to have had bugs
in the way it handled things like seek-from-end. To avoid the
possibility of problems with that in the future, I've instituted the
use of the far better tested 'imprint' library, which was created for
exactly this purpose.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["J/A <archer884@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-digest = "0.8.1"
-sha2 = "0.8.1"
-structopt = "0.3.11"
-walkdir = "2.3.1"
+hashbrown = "0.7"
+imprint = { git = "https://github.com/archer884/imprint" }
+structopt = "0.3"
+walkdir = "2.3"
