--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,15 @@
 [package]
 name = "yogi"
-version = "0.2.3"
+version = "0.2.4"
 authors = ["J/A <archer884@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-hashbrown = "0.7"
+bumpalo = "3.4.0"
+hashbrown = "0.7.2"
 imprint = { git = "https://github.com/archer884/imprint" }
-structopt = "0.3"
-walkdir = "2.3"
+structopt = "0.3.15"
+walkdir = "2.3.1"
 
 [profile.release]
 lto = "thin"
