--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
 name = "yogi"
-version = "0.2.7"
+version = "0.2.8"
 authors = ["J/A <archer884@gmail.com>"]
 edition = "2018"
 
 [dependencies]
 bumpalo = "3.4.0"
-hashbrown = "0.8.0"
+fmtsize = { git = "https://github.com/archer884/fmtsize.git" }
+hashbrown = "0.8.1"
 imprint = { git = "https://github.com/archer884/imprint" }
 structopt = "0.3.15"
 walkdir = "2.3.1"
