--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "yogi"
-version = "0.2.14"
+version = "0.2.15"
 authors = ["J/A <archer884@gmail.com>"]
 edition = "2021"
 
@@ -9,6 +9,7 @@ bumpalo = "3.8.0"
 fmtsize = { git = "https://github.com/archer884/fmtsize" }
 hashbrown = "0.11.2"
 imprint = { git = "https://github.com/archer884/imprint" }
+regex = "1.5.4"
 structopt = "0.3.25"
 walkdir = "2.3.2"
 
