--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,11 @@ edition = "2021"
 
 [dependencies]
 bumpalo = "3.9.1"
+clap = { version = "3.1.6", features = ["derive"] }
 fmtsize = { git = "https://github.com/archer884/fmtsize" }
 hashbrown = "0.12.0"
 imprint = { git = "https://github.com/archer884/imprint" }
 regex = "1.5.5"
-structopt = "0.3.26"
 walkdir = "2.3.2"
 
 [profile.release]
