Ignore files by extension

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "yogi"
-version = "0.3.0"
+version = "0.3.1"
 authors = ["J/A <archer884@gmail.com>"]
 edition = "2021"
 
 [dependencies]
 bumpalo = "3.16.0"
-clap = { version = "4.5.8", features = ["derive", "wrap_help"] }
+clap = { version = "4.5.9", features = ["color", "derive", "env", "wrap_help"] }
 fmtsize = { git = "https://github.com/archer884/fmtsize" }
 hashbrown = "0.14.5"
 imprint = { git = "https://github.com/archer884/imprint" }
